# python-basic

./: README.md  pyproject.toml  requirements.txt
homework_01/: main.py
homework_02/: base.py  car.py  engine.py  plane.py
homework_03/: Dockerfile  app.py
