[tool.poetry]
name = "otus"
version = "0.1.0"
description = ""
authors = ["Toru4ka <ilya.myhin.2001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.110.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
